
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 FEB 10a
  * in src/bdry.c
    - in update_node_type(), fixed a bug: need to call is_zone_intersecting_zone() before
      calling _zone_intersection()
      

2023 FEB 09a
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - fixed bug IONIZATIONREACTION[67] is now IONIZATIONREACTION[79]
  * in src/bdry.c
    - in read_block(), improved the error messages
  

2023 FEB 03b
  * in src/bdry.c
    - in write_block_template() and read_block_actions(), changed the name of _EMFIELD_ACTIONNAME
      to EMField and the name of _FLUID_ACTIONNAME to Fluid
  * in bin/*wrp
    - fixed the wrp files so they can be read with the latest src/bdry.c Block() action
    

2023 FEB 03a
  * in lib/gridg/2Dbase.c
    - in GRIDG_read_grid_2D_from_file(), GRIDG_read_grid_2D_from_argum(), uncommented calls to
      find_xy_on_ghost_nodes -> needed to do the x station cuts within Post() module
  * in lib/gridg/3Dbase.c
    - in GRIDG_read_grid_3D_from_file(), GRIDG_read_grid_3D_from_argum(), uncommented calls to
      find_xyz_on_ghost_nodes -> needed to do the x station cuts within Post() module
  * in model/chem/_Air_Plasma_11s/thoguluva2023.c
    - changed EXPON_TTV from 0.75 to 0.8
  * in model/fluid/doc/Transport_Equations/report.tex
    - In the section "Electron Energy Loss Function", fixed a mistake in the first equation: the
      electron thermal diffusion term should not be there because this term is included within the
      convection term when the convection velocity includes diffusion
      

2023 JAN 23a
  * in bin/Keller-Kloker.wrp, bin/Leblanc.wrp, bin/Noh2D.wrp, bin/Noh3D.wrp, bin/OREX.wrp, bin/RAM-C-II.wrp,